--- a/package.json
+++ b/package.json
@@ -18,11 +18,12 @@
         "type-check": "vue-tsc --build",
         "lint": "eslint . --fix",
         "format": "prettier --write src/",
-        "gen:api": ""
+        "gen:api": "npx openapi-zod-client schema.yml -o src/api/schemas.ts --export-schemas"
     },
     "dependencies": {
         "@google/generative-ai": "^0.24.1",
         "@tailwindcss/vite": "^4.1.11",
+        "@vueuse/core": "^13.9.0",
         "@vueuse/motion": "^3.0.3",
         "@zodios/core": "^10.9.6",
         "axios": "^1.11.0",
@@ -33,6 +34,7 @@
         "motion-v": "^1.7.0",
         "openapi-zod-client": "^1.18.3",
         "pinia": "^3.0.3",
+        "reka-ui": "^2.5.1",
         "tailwind-merge": "^3.3.1",
         "tailwindcss": "^4.1.11",
         "tw-animate-css": "^1.3.6",
