--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "dependencies": {
         "@google/generative-ai": "^0.24.1",
         "@tailwindcss/vite": "^4.1.11",
+        "@vee-validate/zod": "^4.15.1",
         "@vueuse/core": "^13.9.0",
         "@vueuse/motion": "^3.0.3",
         "@zodios/core": "^10.9.6",
@@ -41,6 +42,7 @@
         "tailwind-merge": "^3.3.1",
         "tailwindcss": "^4.1.11",
         "tw-animate-css": "^1.3.6",
+        "vee-validate": "^4.15.1",
         "vue": "^3.5.18",
         "vue-router": "^4.5.1",
         "vue-sonner": "^2.0.2",
