--- a/package.json
+++ b/package.json
@@ -18,10 +18,11 @@
         "type-check": "vue-tsc --build",
         "lint": "eslint . --fix",
         "format": "prettier --write src/",
-        "gen:api": "npx openapi-zod-client schema.yml -o src/api/schemas.ts --export-schemas"
+        "gen:api": "npx openapi-zod-client schema.yml -o src/shared/api/schemas.ts --export-schemas"
     },
     "dependencies": {
         "@google/generative-ai": "^0.24.1",
+        "@rollup/rollup-win32-x64-msvc": "^4.53.3",
         "@tailwindcss/vite": "^4.1.11",
         "@vee-validate/zod": "^4.15.1",
         "@vueuse/core": "^13.9.0",
