--- a/package.json
+++ b/package.json
@@ -21,6 +21,14 @@
         "gen:api": "npx openapi-zod-client schema.yml -o src/shared/api/schemas.ts --export-schemas"
     },
     "dependencies": {
+        "@editorjs/checklist": "^1.6.0",
+        "@editorjs/code": "^2.8.0",
+        "@editorjs/editorjs": "^2.29.1",
+        "@editorjs/header": "^2.8.1",
+        "@editorjs/inline-code": "^1.4.0",
+        "@editorjs/link": "^2.6.2",
+        "@editorjs/list": "^1.9.0",
+        "@editorjs/quote": "^2.7.6",
         "@google/generative-ai": "^0.24.1",
         "@rollup/rollup-win32-x64-msvc": "^4.53.3",
         "@tailwindcss/vite": "^4.1.11",
@@ -32,6 +40,7 @@
         "class-variance-authority": "^0.7.1",
         "clsx": "^2.1.1",
         "dompurify": "^3.2.7",
+        "fund": "^1.0.0",
         "highlight.js": "^11.11.1",
         "jspdf": "^3.0.1",
         "lucide-vue-next": "^0.534.0",
